<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arriereplan_deux"
    android:orientation="vertical"
    tools:context=".InfoPresentation">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/nom"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/ecole"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/programme"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/cours"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/remise"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="0.140"
        android:text="@string/dateRemise"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>